# primitive-unaligned

./: .travis.yml  CHANGELOG.md  README.md  primitive-unaligned.cabal  shell-i686.nix
src-32/Data/Primitive/Unaligned/: Mach.hs
src-64/Data/Primitive/Unaligned/: Mach.hs
src/Data/Primitive/ByteArray/: Unaligned.hs
test/: Unit.hs
