cabal-version: 2.2
name: primitive-unaligned
version: 0.1.0.0
synopsis: Unaligned access to primitive arrays
homepage: https://github.com/haskell-primitive/primitive-unaligned
bug-reports: https://github.com/haskell-primitive/primitive-unaligned/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data

library
  exposed-modules:
    Data.Primitive.ByteArray.Unaligned
  other-modules:
    Data.Primitive.Unaligned.Mach
  build-depends:
    , base >=4.12.0.0 && <5
    , primitive >=0.6.4 && <0.8
  hs-source-dirs: src
  if arch(x86_64)
    hs-source-dirs: src-64
  if arch(i386) || arch(i686)
    hs-source-dirs: src-32
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite unit
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Unit.hs
  build-depends:
    , base
    , primitive-unaligned
    , primitive
  ghc-options: -Wall -O2
  default-language: Haskell2010
